--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/brands.min.css"
+        integrity="sha512-DJLNx+VLY4aEiEQFjiawXaiceujj5GA7lIY8CHCIGQCBPfsEG0nGz1edb4Jvw1LR7q031zS5PpPqFuPA8ihlRA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css" class="css">
     <title>Document</title>
 </head>
+
 <body>
-     
-    <h2>Hello World</h2>
+
+    <div class="topheader">
+        <div class="logo">portal news <span>.</span></div>
+        <div class="tabs">
+            <a href="">News</a>
+            <a href="">Blog</a>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
+
 </html>
